--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-yoga/plugin-defer-stream": "^3.0.0",
-    "garph": "^0.6.2",
+    "@pothos/core": "^3.38.0",
+    "@pothos/plugin-dataloader": "^3.17.1",
+    "@pothos/plugin-relay": "^3.44.0",
+    "@pothos/plugin-simple-objects": "^3.7.0",
+    "chokidar": "^3.5.3",
+    "graphql": "^16.8.1",
     "graphql-yoga": "^5.0.0",
     "sade": "^1.8.1",
     "vite": "^4.5.0",
