--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pothos/plugin-dataloader": "^3.17.1",
     "@pothos/plugin-relay": "^3.44.0",
     "@pothos/plugin-simple-objects": "^3.7.0",
+    "dataloader": "^2.2.2",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.0.0",
     "sade": "^1.8.1",
