--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^20.8.10",
     "aws-lambda": "^1.0.7",
+    "prettier": "^3.1.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
