--- a/example/package.json
+++ b/example/package.json
@@ -4,9 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "../dist/bin.mjs dev",
+    "dev": "concurrently -n fuse,web '../dist/bin.mjs dev' 'vite'",
     "build": "../dist/bin.mjs build"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.1.1",
+    "concurrently": "^8.2.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "urql": "^4.0.6"
+  }
 }
