--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datalayer",
+  "name": "fuse",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@graphql-yoga/plugin-defer-stream": "^3.0.0",
+    "@parcel/watcher": "^2.3.0",
     "@pothos/core": "^3.38.0",
     "@pothos/plugin-dataloader": "^3.17.1",
     "@pothos/plugin-relay": "^3.44.0",
