--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@pothos/core": "^3.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "urql": "^4.0.6"
