--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@escape.tech/graphql-armor-block-field-suggestions": "^2.1.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@graphql-yoga/plugin-defer-stream": "^3.0.0",
+    "@graphql-yoga/plugin-disable-introspection": "^2.0.0",
     "@parcel/watcher": "^2.3.0",
     "@pothos/core": "^3.38.0",
     "@pothos/plugin-dataloader": "^3.17.1",
