fixes, this would be easier with vite

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,8 @@
     "fuse": "dist/bin.mjs"
   },
   "module": "dist/builder.mjs",
-  "types": "dist/builder.d.mts",
+  "main": "dist/builder.js",
+  "types": "dist/builder.d.ts",
   "exports": {
     ".": {
       "types": "./dist/builder.d.ts",
