--- a/examples/next/tsconfig.json
+++ b/examples/next/tsconfig.json
@@ -13,6 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": [
+      "webpack-env" // here
+    ],
     "plugins": [
       {
         "name": "next"
