--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fuse/next": "workspace:*",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
