--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fuse/next": "workspace:*",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@urql/next": "^1.1.0",
+    "graphql": "^16.8.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
