--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -16,6 +16,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./plugin": {
+      "types": "./dist/plugin.d.ts",
+      "import": "./dist/plugin.mjs",
+      "require": "./dist/plugin.js"
     }
   },
   "peerDependencies": {
@@ -23,6 +28,8 @@
   },
   "dependencies": {
     "@escape.tech/graphql-armor-block-field-suggestions": "^2.1.0",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@graphql-yoga/plugin-defer-stream": "^3.0.0",
     "@graphql-yoga/plugin-disable-introspection": "^2.0.0",
@@ -31,6 +38,7 @@
   "devDependencies": {
     "@types/node": "^20.8.10",
     "fuse": "workspace:^",
+    "next": "14.0.3",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
