simple list abstraction for pothos

--- a/packages/pothos-plugin-list/tsconfig.json
+++ b/packages/pothos-plugin-list/tsconfig.json
@@ -17,8 +17,7 @@
     "noUnusedParameters": false,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "useUnknownInCatchVariables": false,
-    "types": ["vite/client"]
+    "useUnknownInCatchVariables": false
   },
   "exclude": ["**/dist", "**/build"]
 }
