--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -17,10 +17,20 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     },
+    "./client": {
+      "types": "./dist/client.d.ts",
+      "import": "./dist/esm/client.js",
+      "require": "./dist/client.js"
+    },
     "./plugin": {
       "types": "./dist/plugin.d.ts",
       "import": "./dist/plugin.mjs",
       "require": "./dist/plugin.js"
+    },
+    "./rsc": {
+      "types": "./dist/rsc.d.ts",
+      "import": "./dist/rsc.mjs",
+      "require": "./dist/rsc.js"
     }
   },
   "peerDependencies": {
@@ -33,10 +43,13 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@graphql-yoga/plugin-defer-stream": "^3.0.0",
     "@graphql-yoga/plugin-disable-introspection": "^2.0.0",
-    "graphql-yoga": "^5.0.0"
+    "@urql/core": "^4.2.0",
+    "graphql-yoga": "^5.0.0",
+    "urql": "^4.0.6"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
+    "@urql/next": "^1.1.0",
     "fuse": "workspace:^",
     "next": "14.0.3",
     "tsup": "^7.2.0",
