--- a/packages/pothos-plugin-list/package.json
+++ b/packages/pothos-plugin-list/package.json
@@ -1,15 +1,24 @@
 {
   "name": "@fuse/pothos-plugin-list",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A paginated list plugin for pothos",
+  "homepage": "https://github.com/StellateHQ/fuse.js",
+  "bugs": "https://github.com/StellateHQ/fuse.js/issues",
+  "license": "MIT",
+  "author": "Stellate engineering <eng@stellate.co>",
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/StellateHQ/fuse.js",
+    "directory": "packages/pothos-plugin-list"
+  },
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist/"
+  ],
   "scripts": {
     "build": "tsup"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bin": {
-    "fuse": "dist/bin.mjs"
   },
   "module": "dist/index.mjs",
   "main": "dist/index.js",
@@ -21,6 +30,10 @@
       "require": "./dist/index.js"
     }
   },
+  "peerDependencies": {
+    "@pothos/core": "*",
+    "graphql": ">=15.1.0"
+  },
   "devDependencies": {
     "@pothos/core": "^3.38.0",
     "@types/node": "^20.8.10",
@@ -28,5 +41,9 @@
     "graphql": "^16.8.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
