--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "fuse",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "build": "pnpm --filter @fuse/pothos-plugin-list build && pnpm --filter fuse build && pnpm --filter @fuse/next build",
     "dev": "pnpm --filter @fuse-examples/next dev",
     "prepare": "husky install"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@changesets/cli": "^2.27.0",
     "husky": "^8.0.0",
