--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -47,8 +47,8 @@
   },
   "peerDependencies": {
     "@graphql-typed-document-node/core": "^3.0.0",
-    "next": ">=13.0.0",
-    "fuse": "^0.1.0"
+    "fuse": "^0.1.0",
+    "next": ">=13.0.0"
   },
   "dependencies": {
     "@escape.tech/graphql-armor-block-field-suggestions": "^2.1.0",
@@ -66,6 +66,7 @@
     "@urql/next": "^1.1.0",
     "fuse": "workspace:^",
     "next": "14.0.3",
+    "stellate": "^2.7.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   },
