--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -43,6 +43,11 @@
       "types": "./dist/rsc.d.ts",
       "import": "./dist/rsc.mjs",
       "require": "./dist/rsc.js"
+    },
+    "./pages": {
+      "types": "./dist/pages.d.ts",
+      "import": "./dist/esm/pages.js",
+      "require": "./dist/pages.js"
     }
   },
   "peerDependencies": {
@@ -63,6 +68,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
+    "@types/react": "^18",
     "@urql/next": "^1.1.0",
     "fuse": "workspace:^",
     "next": "14.0.3",
