remove CLI and such

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fuse",
   "private": true,
   "scripts": {
-    "build": "pnpm --filter @fuse/pothos-plugin-list build && pnpm --filter fuse build && pnpm --filter @fuse/next build",
+    "build": "pnpm --filter fuse build && pnpm --filter @fuse/next build",
     "dev": "pnpm --filter @fuse-examples/next dev",
     "prepare": "husky install"
   },
