--- a/examples/next/tsconfig.json
+++ b/examples/next/tsconfig.json
@@ -22,7 +22,7 @@
       },
       {
         "name": "@0no-co/graphqlsp",
-        "schema": "http://localhost:3000/api/datalayer",
+        "schema": "./schema.graphql",
         "disableTypegen": true,
         "templateIsCallExpression": true,
         "template": "graphql"
