add typechecking ci

--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.2.0",
