--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "build": "tsup",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "vitest run"
   },
   "files": [
     "LICENSE",
@@ -81,7 +82,8 @@
     "@types/react": "^18",
     "next": "14.0.3",
     "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
   "publishConfig": {
     "access": "public",
