--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,10 @@ jobs:
         id: build-core
         run: pnpm --filter fuse build
 
+      - name: Test fuse
+        id: test-core
+        run: pnpm --filter fuse test
+
       - name: TypeCheck example
         id: typecheck-example
         run: pnpm --filter @fuse-examples/next typecheck
