--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "pnpm --filter fuse build",
     "dev": "pnpm --filter @fuse-examples/next dev",
-    "prepare": "husky install && pnpm build"
+    "prepare": "husky install && pnpm build",
+    "website": "pnpm --filter @fuse/website dev"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.0",
