add build script

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "build": "tsup",
     "typecheck": "tsc",
-    "test": "vitest run"
+    "test": "vitest run",
+    "prepublishOnly": "tsup"
   },
   "files": [
     "LICENSE",
