--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,11 +67,13 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@graphql-yoga/plugin-defer-stream": "^3.0.0",
     "@graphql-yoga/plugin-disable-introspection": "^2.0.0",
+    "@graphql-yoga/plugin-persisted-operations": "^3.0.1",
     "@parcel/watcher": "^2.3.0",
     "@pothos/core": "^3.38.0",
     "@pothos/plugin-dataloader": "^3.17.1",
     "@pothos/plugin-relay": "^3.44.0",
     "@urql/core": "^4.2.0",
+    "@urql/exchange-persisted": "^4.1.1",
     "@urql/next": "^1.1.0",
     "dataloader": "^2.2.2",
     "graphql": "^16.8.1",
