add server action

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "pnpm --filter fuse build",
-    "dev": "pnpm --filter @fuse-examples/next dev",
+    "dev": "pnpm --filter @fuse-examples/spacex dev",
     "prepare": "husky install && pnpm build",
     "website": "pnpm --filter @fuse/website dev"
   },
