--- a/packages/create-fuse-app/package.json
+++ b/packages/create-fuse-app/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^20.10.3",
     "tsup": "^7.2.0",
+    "type-fest": "^4.8.3",
     "typescript": "^5.3.2"
   }
 }
