--- a/packages/create-fuse-app/package.json
+++ b/packages/create-fuse-app/package.json
@@ -34,5 +34,9 @@
     "tsup": "^7.2.0",
     "type-fest": "^4.8.3",
     "typescript": "^5.3.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
