--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     "nextra-theme-docs": "^2.13.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sass": "^1.69.5",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
