--- a/packages/create-fuse-app/package.json
+++ b/packages/create-fuse-app/package.json
@@ -12,7 +12,8 @@
   "files": [
     "dist",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "CHANGELOG.md"
   ],
   "repository": {
     "type": "git",
