init a standalone version

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
   "module": "dist/builder.mjs",
   "main": "dist/builder.js",
   "types": "dist/builder.d.ts",
+  "bin": "dist/cli.mjs",
   "exports": {
     ".": {
       "types": "./dist/builder.d.ts",
@@ -38,6 +39,10 @@
     },
     "./next/loader": {
       "require": "./loader.js"
+    },
+    "./dev": {
+      "import": "./dist/dev.mjs",
+      "require": "./dist/dev.mjs"
     },
     "./next": {
       "types": "./dist/next/index.d.ts",
@@ -82,8 +87,11 @@
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "graphql-yoga": "^5.0.0",
+    "sade": "^1.8.1",
     "stellate": "^2.7.1",
-    "urql": "^4.0.6"
+    "urql": "^4.0.6",
+    "vite": "^5.0.6",
+    "vite-plugin-node": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
