--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "useUnknownInCatchVariables": false,
-    "types": ["node"]
+    "types": ["node", "vite/client"]
   },
   "exclude": ["**/dist", "**/build"]
 }
