--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -97,7 +97,8 @@
     "stellate": "^2.7.1",
     "urql": "^4.0.6",
     "vite": "^5.0.6",
-    "vite-plugin-node": "^3.1.0"
+    "vite-plugin-node": "^3.1.0",
+    "wonka": "^6.3.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
