--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -102,6 +102,7 @@
   "devDependencies": {
     "@types/node": "^20.8.10",
     "@types/react": "^18",
+    "execa": "^8.0.1",
     "next": "14.0.3",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
