--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - 'examples/*'
   - 'packages/core'
+  - 'packages/core/test/fixtures/*'
   - 'packages/create-fuse-app'
   - 'website'
