--- a/examples/spacex/tsconfig.json
+++ b/examples/spacex/tsconfig.json
@@ -37,7 +37,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "./types/scopes.ts"
+    "types/scopes.ts"
   ],
   "exclude": ["node_modules"]
 }
