statically type context

--- a/examples/standalone/tsconfig.json
+++ b/examples/standalone/tsconfig.json
@@ -32,6 +32,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "types", "_context.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
