feat(core): authorization on fields and types (#106)
* fuse authorization

* improvements

* tweaks

* rename to addAuthScopes

* add initial test

* add tests

* add docs

* remove need for generic

--- a/examples/spacex/tsconfig.json
+++ b/examples/spacex/tsconfig.json
@@ -32,6 +32,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "types/scopes.ts"
+  ],
   "exclude": ["node_modules"]
 }
