--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,14 +2,14 @@
   "name": "fuse",
   "version": "0.10.0",
   "description": "The magical GraphQL framework",
-  "homepage": "https://github.com/StellateHQ/fuse.js",
-  "bugs": "https://github.com/StellateHQ/fuse.js/issues",
+  "homepage": "https://github.com/StellateHQ/fuse",
+  "bugs": "https://github.com/StellateHQ/fuse/issues",
   "license": "MIT",
   "author": "Stellate engineering <eng@stellate.co>",
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/StellateHQ/fuse.js",
+    "url": "https://github.com/StellateHQ/fuse",
     "directory": "packages/core"
   },
   "scripts": {
