--- a/packages/create-fuse-app/package.json
+++ b/packages/create-fuse-app/package.json
@@ -2,8 +2,8 @@
   "name": "create-fuse-app",
   "version": "0.4.1",
   "description": "The magical GraphQL framework",
-  "homepage": "https://github.com/StellateHQ/fuse.js",
-  "bugs": "https://github.com/StellateHQ/fuse.js/issues",
+  "homepage": "https://github.com/StellateHQ/fuse",
+  "bugs": "https://github.com/StellateHQ/fuse/issues",
   "license": "MIT",
   "author": "Stellate engineering <eng@stellate.co>",
   "keywords": [],
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/StellateHQ/fuse.js",
+    "url": "https://github.com/StellateHQ/fuse",
     "directory": "packages/create-fuse-app"
   },
   "scripts": {
