make the changes

--- a/examples/standalone/tsconfig.json
+++ b/examples/standalone/tsconfig.json
@@ -17,7 +17,7 @@
       {
         "name": "@0no-co/graphqlsp",
         "schema": "./schema.graphql",
-        "tadaOutputLocation": "./fuse/introspection.ts"
+        "tadaOutputLocation": "./src/fuse/gql.d.ts"
       }
     ],
     "paths": {
