--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,8 @@
     "nextra-theme-docs": "^2.13.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-fast-marquee": "^1.6.2",
+    "react-tweet": "^3.2.0",
     "sass": "^1.69.5",
     "tailwind-merge": "^2.0.0"
   },
