--- a/examples/standalone/package.json
+++ b/examples/standalone/package.json
@@ -8,11 +8,12 @@
     "build": "vite build && fuse build"
   },
   "dependencies": {
+    "gql.tada": "1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^0.11.0",
+    "@0no-co/graphqlsp": "^1.0.2",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
