--- a/examples/standalone/tsconfig.json
+++ b/examples/standalone/tsconfig.json
@@ -17,9 +17,7 @@
       {
         "name": "@0no-co/graphqlsp",
         "schema": "./schema.graphql",
-        "disableTypegen": true,
-        "templateIsCallExpression": true,
-        "template": "graphql"
+        "tadaOutputLocation": "./src/fuse/introspection.ts"
       }
     ],
     "paths": {
