--- a/examples/standalone/package.json
+++ b/examples/standalone/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "concurrently": "^8.2.2",
-    "fuse": "workspace:*",
+    "fuse": "file:../../packages/core",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
