chore(core): remove aws-lambda dependency
This removes the `aws-lambda` dependency since it is actually a CLI
unrelated to the `"aws-lambda"` imports made available at run-time by
AWS itself.

Meanwhile, `@types/aws-lambda` does provide the types for _actual_
aws-lambda, so has been added.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -90,7 +90,6 @@
     "@urql/core": "^4.2.3",
     "@urql/introspection": "^1.0.3",
     "@urql/next": "^1.1.1",
-    "aws-lambda": "^1.0.7",
     "dataloader": "^2.2.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
@@ -106,6 +105,7 @@
     "@types/bun": "^1.0.1",
     "@types/node": "^20.8.10",
     "@types/react": "^18",
+    "@types/aws-lambda": "^8.10.137",
     "execa": "^8.0.1",
     "next": "14.0.3",
     "tsup": "^7.2.0",
